--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ms-auto">
+                        <ul class="navbar-nav ms-auto text-center text-md-start w-100 justify-content-md-end">
                             <li class="nav-item">
                                 <a class="nav-link text-white nav-hover" href="#">Home</a>
                             </li>
