--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <!-- Header Section -->
             <header class="bg-transparent py-4">
-                <nav class="navbar navbar-expand-lg navbar-light container">
+                <nav class="navbar navbar-expand-lg navbar-light container px-3">
                     <a href="#" class="navbar-brand d-flex align-items-center">
                         <img src="images/logo.png" alt="E-Learning Logo" class="me-3" style="width: 50px;">
                         <span class="text-white">We Love to Help</span>
