--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link text-white nav-hover" href="#contactUs">Contact Us</a>
                             </li>
                             <li class="nav-item">
-                                <a class="btn btn-primary text-white" href="#">Get Started</a>
+                                <a class="btn btn-primary text-white" href="register.html">Get Started</a>
                             </li>
                         </ul>
                     </div>
