--- a/test.html
+++ b/test.html
@@ -1,69 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Professional Page</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #001f3f; /* Dark blue background */
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 200vh;
-        }
-        
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            background-color: #001f3f;
-            border-radius: 15px;
-            overflow: hidden;
-        }
-
-        .circle {
-            position: absolute;
-            background-color: #f0f0f0; /* Whitish color */
-            border-radius: 50%;
-            opacity: 0.9;
-            opacity: 0.8;
-            filter: blur(50px);
-        }
-
-        .top-circle {
-            width: 300px;
-            height: 300px;
-            top: -150px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        .left-circle {
-            width: 200px;
-            height: 200px;
-            top: 80%;
-            left: -100px;
-            transform: translateY(-50%);
-        }
-
-        .right-circle {
-            width: 200px;
-            height: 200px;
-            top: 40%;
-            right: -100px;
-            transform: translateY(-50%);
-        }
-    </style>
+  <title>Login/Registration</title>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9nduBl1c1uCsWF434o1fQ/7A4Tw2p6TJ0g0iR/Z7yy6tSl3U0u9xM0nH/d26j3JOk" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="circle top-circle"></div>
-        <div class="circle left-circle"></div>
-        <div class="circle right-circle"></div>
+  <div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 id="form-title">Login</h3>
+          </div>
+          <div class="card-body" id="form-container">
+            <form id="login-form">
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
+              </div>
+              <button type="submit" class="btn btn-primary">Login</button>
+              <p class="mt-2">New user? <a href="#" id="register-link">Sign up</a></p>
+              <p class="mt-2">Or sign in with Google:</p>
+              <a href="#"><img src="google-logo.png" alt="Google Login"></a>
+            </form>
+
+            <form id="register-form" style="display: none;">
+              <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter username">
+              </div>
+              <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+              </div>
+              <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Enter password">
+              </div>
+              <div class="mb-3">
+                <label for="confirm-password" class="form-label">Confirm Password</label>
+                <input type="password" class="form-control" id="confirm-password" placeholder="Confirm password">
+              </div>
+              <button type="submit" class="btn btn-primary">Register</button>
+              <p class="mt-2">Already have an account? <a href="#" id="login-link">Login</a></p>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+
+  <script>
+    const loginLink = document.getElementById('login-link');
+    const registerLink = document.getElementById('register-link');
+    const loginForm = document.getElementById('login-form');
+    const registerForm = document.getElementById('register-form');
+    const formTitle = document.getElementById('form-title');
+    const formContainer = document.getElementById('form-container');
+
+    registerLink.addEventListener('click', () => {
+      loginForm.style.display = 'none';
+      registerForm.style.display = 'block';
+      formTitle.textContent = 'Register';
+    });
+
+    loginLink.addEventListener('click', () => {
+      registerForm.style.display = 'none';
+      loginForm.style.display = 'block';
+      formTitle.textContent = 'Login';
+    });
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geQEXqFastqIoUjf3Q93+2uE2E+hOmeq41NWBd6Ry0Pg4+F+Q9Hu5F9AsQ/7kI+A" crossorigin="anonymous"></script>
 </body>
 </html>
