--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                                 <a class="nav-link text-white nav-hover" href="index.html?#ServicesSection">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white nav-hover" href="#contactUs">Contact Us</a>
+                                <a class="nav-link text-white nav-hover" href="index.html?#contactUs">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="btn btn-primary text-white" href="register.html">Get Started</a>
