added home page

--- a/register.html
+++ b/register.html
@@ -71,6 +71,9 @@
                                 <button type="submit" class="btn btn-primary btns w-100">Login</button>
                                 <p class="mt-2 text-white text-left navgt-text">Sign up <a href="#" id="register-link">here
                                     </a>for a new user</p>
+
+                                <p class="mt-2 text-white text-left navgt-text">Go to <a href="Home.html" id="register-link">home                               </a>page</p>
+
                                 <button class="gsi-material-button btn btn-light w-50">
                                     <div class="gsi-material-button-state"></div>
                                     <div class="gsi-material-button-content-wrapper">
