added home page - chat support

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="left-hero text-center text-md-start">
                         <h1 class="display-4 text-white mb-4">Change Your Grades With Us</h1>
                         <p class="text-white-50 mb-4">The most trusted platform for you to get the highest grades<br>We guarantee you can trust us</p>
-                        <a href="#" class="btn btn-primary btn-lg">Get Started</a>
+                        <a href="register.html" class="btn btn-primary btn-lg">Get Started</a>
                     </div>
                     <div class="right-hero mb-4 mb-md-0">
                         <img src="images/image 1.png" alt="Hero Image" class="img-fluid">
