added home page - chat support

--- a/Home.html
+++ b/Home.html
@@ -179,6 +179,7 @@
         <div class="chat-header">
             Chat Support
             <i class="fa-solid fa-circle-xmark close-chat"></i>
+            <!-- <span class="close-chat">&times;</span> -->
         </div>
         <div class="chat-messages">
             <div class="message">Hello</div>
