--- a/Task.html
+++ b/Task.html
@@ -10,10 +10,6 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/task.css">
-
-    <style>
-        
-    </style>
 </head>
 
 <body>
@@ -213,7 +209,7 @@
 
     <!-- history -->
 
-    <div class="container history-section mt-5">
+    <div class="container history-section mt-5 mb-5">
         <h4 class="text-white">History</h4>
     
         <div class="history-item mb-3 p-3 rounded bg-light">
