--- a/client/Home.html
+++ b/client/Home.html
@@ -7,9 +7,9 @@
     <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/footer.css">
 
     <style>
         
@@ -23,7 +23,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark px-3 py-3">
         <a class="navbar-brand d-flex align-items-center" href="#">
-            <img src="images/logo.png" alt="eLearning Logo" style="width: 50px;" class="me-2">
+            <img src="../images/logo.png" alt="eLearning Logo" style="width: 50px;" class="me-2">
             <span>We Love to Help</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -151,21 +151,21 @@
         <div class="row justify-content-center">
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="service-item">
-                    <img src="images/ChatGPT-Logo.png" alt="Premium ChatGPT">
+                    <img src="../images/ChatGPT-Logo.png" alt="Premium ChatGPT">
                     <h5>Premium ChatGPT</h5>
                     <a href="#" class="access-btn">ACCESS</a>
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="service-item">
-                    <img src="images/N-Netflix-Logo.png" alt="Netflix">
+                    <img src="../images/N-Netflix-Logo.png" alt="Netflix">
                     <h5>Netflix</h5>
                     <a href="#" class="access-btn">ACCESS</a>
                 </div>
             </div>
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="service-item">
-                    <img src="images/spotify-icon.png" alt="Spotify">
+                    <img src="../images/spotify-icon.png" alt="Spotify">
                     <h5>Spotify</h5>
                     <a href="#" class="access-btn">ACCESS</a>
                 </div>
@@ -222,10 +222,10 @@
                 <div class="col-md-4">
                     <h5 class="mb-4">Social Media</h5>
                     <div class="d-flex justify-content-center justify-content-md-start gap-3">
-                        <a href="#"><img src="images/discord.png" alt="Discord" class="img-fluid" style="width: 40px;"></a>
-                        <a href="#"><img src="images/whatsapp.png" alt="WhatsApp" class="img-fluid" style="width: 40px;"></a>
-                        <a href="#"><img src="images/X.png" alt="X" class="img-fluid" style="width: 40px;"></a>
-                        <a href="#"><img src="images/ig.png" alt="Instagram" class="img-fluid" style="width: 40px;"></a>
+                        <a href="#"><img src="../images/discord.png" alt="Discord" class="img-fluid" style="width: 40px;"></a>
+                        <a href="#"><img src="../images/whatsapp.png" alt="WhatsApp" class="img-fluid" style="width: 40px;"></a>
+                        <a href="#"><img src="../images/X.png" alt="X" class="img-fluid" style="width: 40px;"></a>
+                        <a href="#"><img src="../images/ig.png" alt="Instagram" class="img-fluid" style="width: 40px;"></a>
                     </div>
                 </div>
             </div>
