--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
                                 <p>We create visually engaging and content-rich presentations tailored to your needs and goals.</p>
                             </div>
                         </div>
+                        <div class="col-md-6 col-lg-3">
+                            <div class="service text-white p-4 rounded shadow-sm">
+                                <img src="images/image 2.png" alt="Presentation Icon" class="mb-3 img-fluid">
+                                <h3>Classes</h3>
+                                <p>We create visually engaging and content-rich presentations tailored to your needs and goals.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
